@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: Optimization to avoid re-parsing test profile definition multiple times
 pts-core: Optimization to avoid re-parsing installed test metadata multiple times
+pts-core: Allow longer HTTP timeouts on OpenBenchmarking.org result uploads if needed
 
 Phoronix Test Suite 10.2.2
 17 February 2021
